--- a/mock.html
+++ b/mock.html
@@ -6,12 +6,21 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	<div class="main-content">
-		<div id="header">
-			<div id="logo"></div>
+<div class="main-content">
+	<div id="header">
+		<div id="logo"></div>
+		<div id="navigation-container">
+			<ul class="navigation">
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Portfolio</a></li>
+				<li><a href="#">Resume</a></li>
+				<li><a href="#">Blog</a></li>
+				<li><a href="#">Contact</a></li>
+			</ul>
 		</div>
-		<div id="body"></div>
-		<div id="footer"></div>
 	</div>
+	<div id="body"></div>
+	<div id="footer"></div>
+</div>
 </body>
 </html>
