--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script src="js/bower_components/requirejs/require.js"></script>
 	<script src="js/require.config.js"></script>
 	<script>
-		require(['main.index']);
+		require(['js/main.homepage.js']);
 	</script>
 </body>
 </html>
