--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Marionette Behavior</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 </head>
 <body>
 	<script src="js/bower_components/requirejs/require.js"></script>
