--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Homepage | The Departed Online</title>
+	<title>Contact | The Departed Online</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 </head>
@@ -9,7 +9,7 @@
 	<script src="js/bower_components/requirejs/require.js"></script>
 	<script src="js/require.config.js"></script>
 	<script>
-		require(['js/main.homepage.js']);
+		require(['js/main.contact.js']);
 	</script>
 </body>
 </html>
